--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "react-icons": "^3.9.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
